--- a/ScratchyXna/ScratchyXna.csproj
+++ b/ScratchyXna/ScratchyXna.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="Data\PlayerData.cs" />
     <Compile Include="Enumerations\BackButtonBehaviours.cs" />
+    <Compile Include="Enumerations\StampMethods.cs" />
+    <Compile Include="Enumerations\StampCroppings.cs" />
     <Compile Include="Input\TouchInput.cs" />
     <Compile Include="Sprites\Costume.cs" />
     <Compile Include="Enumerations\EnumerationExtensions.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="Text\TextAnimations.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="XnaHelpers\LinqExtensions.cs" />
+    <Compile Include="XnaHelpers\MatrixExtensions.cs" />
     <Compile Include="XnaHelpers\RectangleF.cs" />
   </ItemGroup>
   <ItemGroup />
