--- a/ScratchyXna/ScratchyXna.csproj
+++ b/ScratchyXna/ScratchyXna.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Text\Text.cs" />
     <Compile Include="Enumerations\Alignment.cs" />
     <Compile Include="Text\TextAnimations.cs" />
-    <Compile Include="Timer.cs" />
+    <Compile Include="Time\ScheduledEvent.cs" />
     <Compile Include="XnaHelpers\LinqExtensions.cs" />
     <Compile Include="XnaHelpers\MatrixExtensions.cs" />
     <Compile Include="XnaHelpers\RectangleF.cs" />
