--- a/ScratchyXna/ScratchyXna.csproj
+++ b/ScratchyXna/ScratchyXna.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Text\Text.cs" />
     <Compile Include="Enumerations\Alignment.cs" />
     <Compile Include="Text\TextAnimations.cs" />
+    <Compile Include="Text\TextSprite.cs" />
     <Compile Include="Time\ScheduledEvent.cs" />
     <Compile Include="Time\Timer.cs" />
     <Compile Include="XnaHelpers\LinqExtensions.cs" />
