Sprite and Text derive from base GraphicObject
This means Text now has GlideTo() and some other stuff formerly only in
Sprite

--- a/ScratchyXna/ScratchyXna.csproj
+++ b/ScratchyXna/ScratchyXna.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GraphicObject.cs" />
     <Compile Include="Data\PlayerData.cs" />
     <Compile Include="Enumerations\BackButtonBehaviours.cs" />
     <Compile Include="Enumerations\StampMethods.cs" />
