--- a/ScratchyXna/ScratchyXna.csproj
+++ b/ScratchyXna/ScratchyXna.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Enumerations\BackButtonBehaviours.cs" />
     <Compile Include="Enumerations\StampMethods.cs" />
     <Compile Include="Enumerations\StampCroppings.cs" />
+    <Compile Include="Input\AccelerometerInput.cs" />
+    <Compile Include="Input\GyroscopeInput.cs" />
     <Compile Include="Input\TouchInput.cs" />
     <Compile Include="Scenes\Background.cs" />
     <Compile Include="Scenes\BackgroundLayer.cs" />
