--- a/ScratchyXnaPhone/ScratchyXnaPhone.csproj
+++ b/ScratchyXnaPhone/ScratchyXnaPhone.csproj
@@ -47,6 +47,7 @@
     <Reference Include="Microsoft.Xna.Framework.Graphics" />
     <Reference Include="Microsoft.Xna.Framework.GamerServices" />
     <Reference Include="Microsoft.Xna.Framework.Input.Touch" />
+    <Reference Include="Microsoft.Devices.Sensors" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -85,6 +86,12 @@
     </Compile>
     <Compile Include="..\ScratchyXna\GraphicObject.cs">
       <Link>GraphicObject.cs</Link>
+    </Compile>
+    <Compile Include="..\ScratchyXna\Input\AccelerometerInput.cs">
+      <Link>Input\AccelerometerInput.cs</Link>
+    </Compile>
+    <Compile Include="..\ScratchyXna\Input\GyroscopeInput.cs">
+      <Link>Input\GyroscopeInput.cs</Link>
     </Compile>
     <Compile Include="..\ScratchyXna\Input\KeyboardInput.cs">
       <Link>Input\KeyboardInput.cs</Link>
